<resources>
    <string name="app_name">TrackMe</string>
    <string name="select">Select Customer from Here:</string>
    <string name="title_activity_maps">Map</string>
    <string name="large_text">
        "TrackMe.\n\n"

        "This application is used to fetch user Current Location and also he can Search any location with his choice."
        "Location can be used to update any user GeoLocation\n\n"

        "This application is developed by DEVASHISH SHARMA, under the supervision of 'Fenestec Technologies Pvt. Ltd."
        "Any Copy or Modification in content of this application may illegal. \n\n"

        "Thank You\n"

        "Devashish Sharma.\n"

    </string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Customer</item>
        <item>Settings</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_table">Customers</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login">LOGIN</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="enter_database_name">Enter Database Name</string>
    <string name="enter_password">Enter Password</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
</resources>

